--- a/Intro_GitHub.Rmd
+++ b/Intro_GitHub.Rmd
@@ -13,6 +13,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 
 ggplot(data = mtcars, aes(x = mpg)) +
-  geom_histogram(colour = "black", fill = "white", bins = 15)
+  geom_histogram(colour = "black", fill = "white", bins = 15) + 
+  labs(x = "Miles per Gallon")
 ```
 
